--- a/style/gallery.css
+++ b/style/gallery.css
@@ -11,10 +11,7 @@
   #gallery .content .container .column {
     width: 456px;
   }
-  #gallery .content .container .column .picture {
-    padding-bottom: 24px;
-  }
-  #gallery .content .container .gallery-fogging {
+  #gallery .content .gallery-fogging {
     height: 360px;
   }
 }
@@ -29,10 +26,7 @@
   #gallery .content .container .column {
     width: 304px;
   }
-  #gallery .content .container .column .picture {
-    padding-bottom: 24px;
-  }
-  #gallery .content .container .gallery-fogging {
+  #gallery .content .gallery-fogging {
     height: 239px;
   }
 }
@@ -40,19 +34,34 @@
   #gallery {
     height: 1220px;
   }
+  #gallery .content {
+    height: 100%;
+  }
   #gallery .content .container {
-    display: none;
+    margin-top: 90px;
   }
-  #gallery .content .container .column > div:last-child {
-    display: none;
+  #gallery .content .container .column {
+    width: 352px;
   }
-  #gallery .content .container > div:last-child {
-    display: none;
+  #gallery .content .gallery-fogging {
+    height: 189px;
   }
 }
 @media (min-width: 420px) and (max-width: 767px) {
   #gallery {
     height: 757px;
+  }
+  #gallery .content {
+    height: 100%;
+  }
+  #gallery .content .container {
+    margin-top: 90px;
+  }
+  #gallery .content .container .column {
+    width: 178px;
+  }
+  #gallery .content .gallery-fogging {
+    height: 189px;
   }
 }
 #gallery {
@@ -62,6 +71,8 @@
 #gallery .container {
   display: flex;
   justify-content: space-between;
+  width: 100%;
+  height: 100%;
   z-index: -3;
 }
 #gallery .container .column {
@@ -70,17 +81,22 @@
   position: relative;
   z-index: -2;
 }
-#gallery .container .column .picture img {
+#gallery .container .column .frame {
+  width: 100%;
+  padding-bottom: 24px;
+}
+#gallery .container .column .frame .picture {
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
 #gallery .container .upper {
   transform: translateY(-50px);
 }
-#gallery .container .gallery-fogging {
+#gallery .gallery-fogging {
   display: block;
   position: absolute;
-  z-index: -1;
+  z-index: 10;
   bottom: 0;
   width: 100%;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
