--- a/style/gallery.scss
+++ b/style/gallery.scss
@@ -7,13 +7,10 @@
         margin-top: 125px;
         .column {
           width: 456px;
-          .picture {
-            padding-bottom: 24px;
-          }
         }
-        .gallery-fogging {
-          height: 360px;
-        }
+      }
+      .gallery-fogging {
+        height: 360px;
       }
     }
   }
@@ -29,13 +26,10 @@
         margin-top: 110px;
         .column {
           width: 304px;
-          .picture {
-            padding-bottom: 24px;
-          }
         }
-        .gallery-fogging {
-          height: 239px;
-        }
+      }
+      .gallery-fogging {
+        height: 239px;
       }
     }
   }
@@ -47,14 +41,15 @@
   #gallery {
     height: 1220px;
     .content {
+      height: 100%;
       .container {
-        display: none;
-        .column > div:last-child {
-          display: none;
+        margin-top: 90px;
+        .column {
+          width: 352px;
         }
       }
-      .container > div:last-child {
-        display: none;
+      .gallery-fogging {
+        height: 189px;
       }
     }
   }
@@ -65,8 +60,15 @@
   #gallery {
     height: 757px;
     .content {
+      height: 100%;
       .container {
-
+        margin-top: 90px;
+        .column {
+          width: 178px;
+        }
+      }
+      .gallery-fogging {
+        height: 189px;
       }
     }
   }
@@ -79,14 +81,19 @@
   .container {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    height: 100%;
     z-index: -3;
     .column {
       display: flex;
       flex-direction: column;
       position: relative;
       z-index: -2;
-      .picture {
-        img {
+      .frame {
+        width: 100%;
+        padding-bottom: 24px;
+        .picture {
+          object-fit: cover;
           width: 100%;
           height: 100%;
         }
@@ -95,13 +102,13 @@
     .upper {
       transform: translateY(-50px);
     }
-    .gallery-fogging {
-      display: block;
-      position: absolute;
-      z-index: -1;
-      bottom: 0;
-      width: 100%;
-      background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
-    }
+  }
+  .gallery-fogging {
+    display: block;
+    position: absolute;
+    z-index: 10;
+    bottom: 0;
+    width: 100%;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
   }
 }
