--- a/style/header.scss
+++ b/style/header.scss
@@ -39,7 +39,7 @@
                             line-height: 100%;
                             letter-spacing: 2px;
                         }
-                        img {
+                        .header-menu-arrow {
                             display: none;
                         }
                     }
