--- a/style/tickets.css
+++ b/style/tickets.css
@@ -16,6 +16,11 @@
     height: 550px;
     position: relative;
   }
+  #tickets .content .container .item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
   #tickets .content .container .item h5 {
     font-size: 28px;
   }
