--- a/style/tickets.scss
+++ b/style/tickets.scss
@@ -15,6 +15,11 @@
           width: 720px;
           height: 550px;
           position: relative;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
 
           h5 {
             font-size: 28px;
