--- a/style/welcome.css
+++ b/style/welcome.css
@@ -309,6 +309,12 @@
   #welcome .content .welcome-slider-io .welcome-slider-io-metadata {
     width: 71px;
     height: 40px;
+    font-size: 20px;
+  }
+  #welcome .content .welcome-slider-io .welcome-slider-io-metadata .bar {
+    width: 2px;
+    height: 20px;
+    background-color: white;
   }
   #welcome .content .welcome-slider-io .welcome-slider-io-pointer {
     width: 160px;
@@ -349,9 +355,19 @@
     width: 100%;
     height: 194px;
   }
+  .menu-opened-welcome .main-menu-panorama .sunset-holder img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
   .menu-opened-welcome .main-menu-panorama .hall-holder, .menu-opened-welcome .main-menu-panorama .view-holder {
     width: 319px;
     height: 161px;
+  }
+  .menu-opened-welcome .main-menu-panorama .hall-holder img, .menu-opened-welcome .main-menu-panorama .view-holder img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
   .menu-closed-welcome .text-content {
     display: flex;
@@ -436,12 +452,13 @@
     align-content: center;
     width: 50px;
     height: 40px;
+    font-size: 16px;
   }
   #welcome .content .welcome-slider-io .welcome-slider-io-metadata .bar {
     background-color: white;
-    height: 20px;
+    height: 16px;
     width: 2px;
-    transform: translateY(9px);
+    transform: translateY(10px);
   }
   #welcome .content .welcome-slider-io .welcome-slider-io-pointer {
     display: flex;
