--- a/style/header.scss
+++ b/style/header.scss
@@ -329,6 +329,7 @@ header {
         }
         nav {
             .menu-button {
+                background-color: black;
                 svg {
                     background-color: black;
                 }
