--- a/style/style.css
+++ b/style/style.css
@@ -56,7 +56,7 @@
     width: 728px;
   }
 }
-@media (min-width: 420px) and (max-width: 767px) {
+@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
   main section .content {
     width: 380px;
   }
