--- a/style/tickets.scss
+++ b/style/tickets.scss
@@ -299,7 +299,7 @@
 }
 
 
-@media (min-width: 420px) and (max-width: 767px) {
+@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
   #tickets {
     height: 759px;
     .content {
