--- a/style/contacts.scss
+++ b/style/contacts.scss
@@ -101,7 +101,7 @@
 }
 
 
-@media (min-width: 420px) and (max-width: 767px) {
+@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
   #contacts {
     height: 636px;
     .content {
