--- a/style/explore.css
+++ b/style/explore.css
@@ -140,7 +140,7 @@
     display: none;
   }
 }
-@media (min-width: 420px) and (max-width: 767px) {
+@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
   #explore {
     height: 551px;
   }
