--- a/style/style.scss
+++ b/style/style.scss
@@ -73,7 +73,7 @@
 }
 
 
-@media (min-width: 420px) and (max-width: 767px) {
+@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
   main {
     section {
       .content {
