--- a/style/video.css
+++ b/style/video.css
@@ -133,7 +133,7 @@
     height: 10px;
   }
 }
-@media (min-width: 420px) and (max-width: 767px) {
+@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
   #video {
     height: 555px;
   }
