--- a/style/visiting.scss
+++ b/style/visiting.scss
@@ -162,7 +162,7 @@
 }
 
 
-@media (min-width: 420px) and (max-width: 767px) {
+@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
   #visiting {
     .content {
       height: 2153px;
