--- a/style/welcome.css
+++ b/style/welcome.css
@@ -382,7 +382,7 @@
     display: none;
   }
 }
-@media (min-width: 420px) and (max-width: 767px) {
+@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
   #welcome .content {
     display: flex;
     flex-direction: column;
