--- a/style/welcome.scss
+++ b/style/welcome.scss
@@ -401,7 +401,7 @@
   }
 }
 
-@media (min-width: 420px) and (max-width: 767px) {
+@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
   #welcome {
     .content {
       display: flex;
