--- a/style/contacts.css
+++ b/style/contacts.css
@@ -90,7 +90,7 @@
     height: 476px;
   }
 }
-@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
+@media (min-width: 420px) and (max-width: 767px) {
   #contacts {
     height: 636px;
   }
