--- a/style/footer.scss
+++ b/style/footer.scss
@@ -208,7 +208,7 @@
 }
 
 
-@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
+@media (min-width: 420px) and (max-width: 767px) {
   footer {
     height: 400px;
     .content {
