--- a/style/gallery.scss
+++ b/style/gallery.scss
@@ -56,7 +56,7 @@
 }
 
 
-@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
+@media (min-width: 420px) and (max-width: 767px) {
   #gallery {
     height: 757px;
     .content {
