--- a/style/header.css
+++ b/style/header.css
@@ -193,7 +193,7 @@
     height: 12px;
   }
 }
-@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
+@media (min-width: 420px) and (max-width: 767px) {
   header {
     height: 90px;
   }
