--- a/style/parallax.scss
+++ b/style/parallax.scss
@@ -22,7 +22,7 @@
 }
 
 
-@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
+@media (min-width: 420px) and (max-width: 767px) {
   .main-gap {
     height: 300px;
     width: 420px;
@@ -37,9 +37,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
     height: 100%;
-    object-fit: contain;
+    width: 100vw;
     .gap-view {
       object-fit: cover;
       width: 100%;
