--- a/style/visiting.css
+++ b/style/visiting.css
@@ -153,7 +153,7 @@
     font-size: 16px;
   }
 }
-@media (min-width: 420px) and (max-width: 767px) and (pointer: coarse) {
+@media (min-width: 420px) and (max-width: 767px) {
   #visiting .content {
     height: 2153px;
   }
