--- a/style/welcome.css
+++ b/style/welcome.css
@@ -43,24 +43,21 @@
   #welcome .content .text-content .discover-button:hover {
     background-color: rgb(157, 134, 101);
   }
-  #welcome .content .joconda-holder {
-    position: relative;
+  #welcome .content .picture-holder {
+    position: absolute;
+    width: 1000px;
+    height: 750px;
+    top: 0;
+    right: 0;
   }
-  #welcome .content .joconda-shadow {
+  #welcome .content .picture-shadow {
     position: absolute;
     background: linear-gradient(to right, rgb(0, 0, 0), transparent);
     z-index: 1;
     top: 0;
-    left: 440px;
+    left: 0;
     height: 810px;
     width: 300px;
-  }
-  #welcome .content img {
-    z-index: 0;
-    top: 0;
-    right: 0;
-    position: absolute;
-    width: 1000px;
   }
   #welcome .content .welcome-slider-io {
     display: flex;
@@ -167,26 +164,20 @@
     text-align: center;
     vertical-align: middle;
   }
-  #welcome .content .joconda-holder {
-    position: relative;
-  }
-  #welcome .content .joconda-holder img {
-    z-index: 0;
+  #welcome .content .picture-holder {
+    position: absolute;
     top: 0;
     right: 0;
-    position: absolute;
-    object-fit: cover;
-    height: 525px;
     width: 700px;
-    left: 304px;
+    height: 525px;
   }
-  #welcome .content .joconda-shadow {
+  #welcome .content .picture-holder .picture-shadow {
     position: absolute;
     background: linear-gradient(to right, rgb(0, 0, 0), transparent);
     z-index: 1;
     top: 0;
-    left: 304px;
-    height: 525px;
+    left: 0;
+    height: 100%;
     width: 250px;
   }
   #welcome .content .welcome-slider-io {
@@ -286,15 +277,15 @@
   #welcome .content .text-content .discover-button {
     display: none;
   }
-  #welcome .content .joconda-holder {
+  #welcome .content .picture-holder {
     width: 728px;
     height: 546px;
     object-fit: cover;
   }
-  #welcome .content .joconda-holder .joconda-shadow {
+  #welcome .content .picture-holder .picture-shadow {
     display: none;
   }
-  #welcome .content .joconda-holder img {
+  #welcome .content .picture-holder img {
     width: 100%;
     height: 100%;
   }
@@ -335,7 +326,7 @@
   .menu-opened-welcome .text-content {
     display: none !important;
   }
-  .menu-opened-welcome .joconda-holder {
+  .menu-opened-welcome .picture-holder {
     display: none;
   }
   .menu-opened-welcome .welcome-slider-io {
@@ -372,7 +363,7 @@
   .menu-closed-welcome .text-content {
     display: flex;
   }
-  .menu-closed-welcome .joconda-holder {
+  .menu-closed-welcome .picture-holder {
     display: block;
   }
   .menu-closed-welcome .welcome-slider-io {
@@ -421,17 +412,17 @@
   #welcome .content .text-content .discover-button {
     display: none;
   }
-  #welcome .content .joconda-holder {
+  #welcome .content .picture-holder {
     position: absolute;
     width: 380px;
     height: 285px;
     top: 179px;
     object-fit: cover;
   }
-  #welcome .content .joconda-holder .joconda-shadow {
+  #welcome .content .picture-holder .picture-shadow {
     display: none;
   }
-  #welcome .content .joconda-holder img {
+  #welcome .content .picture-holder img {
     width: 100%;
     height: 100%;
   }
@@ -492,7 +483,7 @@
   .menu-opened-welcome .text-content {
     display: none !important;
   }
-  .menu-opened-welcome .joconda-holder {
+  .menu-opened-welcome .picture-holder {
     display: none;
   }
   .menu-opened-welcome .welcome-slider-io {
@@ -520,6 +511,10 @@
 }
 #welcome .content {
   position: relative;
+}
+#welcome .content .text-content {
+  pointer-events: none;
+  user-select: none;
 }
 #welcome .content .text-content h1 {
   z-index: 2;
@@ -559,6 +554,21 @@
   background: rgb(157, 134, 101);
   cursor: pointer;
 }
+#welcome .content .picture-holder .picture-shadow {
+  pointer-events: none;
+}
+#welcome .content .picture-holder img {
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#welcome .content .picture-holder .picture-inactive {
+  opacity: 0;
+}
 #welcome .content .welcome-slider-io {
   bottom: 0;
   right: 0;
@@ -587,14 +597,83 @@
 #welcome .content .welcome-slider-io .welcome-slider-io-pointer .welcome-slider-io-point:hover {
   background-color: rgb(157, 134, 101);
 }
+#welcome .content .welcome-slider-io .welcome-slider-io-pointer .welcome-slider-io-point-active {
+  background-color: rgb(126, 108, 81);
+}
 #welcome .content .welcome-slider-io .welcome-slider-io-swiper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   align-content: center;
 }
-#welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-left-arrow img {
+#welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-right-arrow, #welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-left-arrow {
+  background-color: black;
+}
+#welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-right-arrow path, #welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-left-arrow path {
+  transition: 0.3s ease;
+}
+#welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-right-arrow:hover path, #welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-left-arrow:hover path {
+  fill: rgb(157, 134, 101);
+}
+#welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-left-arrow svg {
   transform: scaleX(-1);
+}
+
+.appear-from-the-right {
+  animation: appear-from-the-right-animation 1s ease-out forwards;
+}
+
+.disappear-to-the-left {
+  animation: disappear-to-the-left-animation 1s ease-out forwards;
+}
+
+@keyframes appear-from-the-right-animation {
+  from {
+    opacity: 0;
+    transform: translateX(40%) scale(0.7);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+}
+@keyframes disappear-to-the-left-animation {
+  from {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(-40%) scale(0.7);
+  }
+}
+.appear-from-the-left {
+  animation: appear-from-the-left-animation 1s ease-out forwards;
+}
+
+.disappear-to-the-right {
+  animation: disappear-to-the-right-animation 1s ease-out forwards;
+}
+
+@keyframes appear-from-the-left-animation {
+  from {
+    opacity: 0;
+    transform: translateX(-40%) scale(0.7);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+}
+@keyframes disappear-to-the-right-animation {
+  from {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(40%) scale(0.7);
+  }
 }
 
 /*# sourceMappingURL=welcome.css.map */
