--- a/style/gallery.scss
+++ b/style/gallery.scss
@@ -107,7 +107,7 @@
       transform: translateY(-50px);
     }
   }
-  .gallery-fogging {border: 1px solid red;
+  .gallery-fogging {
     display: block;
     position: absolute;
     z-index: 10;
