--- a/style/tickets.scss
+++ b/style/tickets.scss
@@ -382,6 +382,7 @@
 #tickets {
   .content {
     .container {
+      user-select: none;
       h5 {
         font-family: Roboto, sans-serif;
         font-weight: 700;
