--- a/style/contacts.scss
+++ b/style/contacts.scss
@@ -143,6 +143,7 @@
 #contacts {
   .container {
     .description {
+      user-select: none;
       h5 {
         font-family: Roboto, sans-serif;
         font-weight: 500;
