--- a/style/header.css
+++ b/style/header.css
@@ -269,6 +269,7 @@ header {
   flex-direction: column;
   width: 100%;
   background: rgb(3, 3, 3);
+  user-select: none;
 }
 header #line {
   height: 100%;
