--- a/style/welcome.scss
+++ b/style/welcome.scss
@@ -288,15 +288,11 @@
         }
       }
       .picture-holder {
+        position: relative;
         width: 728px;
         height: 546px;
-        object-fit: cover;
         .picture-shadow {
           display: none;
-        }
-        img {
-          width: 100%;
-          height: 100%;
         }
       }
       .welcome-slider-io {
@@ -331,6 +327,10 @@
           height: 8px;
           display: flex;
           justify-content: space-between;
+          svg {
+            width: 30px;
+            height: 10px;
+          }
         }
       }
     }
@@ -482,17 +482,11 @@
           }
         }
         .welcome-slider-io-swiper {
-          width: 55px;
-          height: 8px;
-          transform: translateY(-4px);
-          div {
-            width: 20px;
+          width: 60px;
+          height: 10px;
+          svg {
+            width: 24px;
             height: 10px;
-            img {
-              object-fit: contain;
-              width: 100%;
-              height: 100%;
-            }
           }
         }
       }
@@ -583,17 +577,18 @@
       }
     }
     .picture-holder {
+      user-select: none;
       .picture-shadow {
         pointer-events: none;
       }
       img {
-        pointer-events: none;
         position: absolute;
         top: 0;
         right: 0;
         width: 100%;
         height: 100%;
         object-fit: cover;
+        pointer-events: none;
       }
       .picture-inactive {
         opacity: 0;
