--- a/style/gallery.css
+++ b/style/gallery.css
@@ -71,6 +71,7 @@
 #gallery {
   position: relative;
   z-index: -3;
+  user-select: none;
 }
 #gallery .container {
   display: flex;
@@ -103,6 +104,25 @@
   z-index: 10;
   bottom: 0;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+}
+
+.gallery__picture-invisible {
+  opacity: 0;
+}
+
+.gallery__picture-floating-up {
+  animation: 2s ease gallery__picture-floating-up forwards;
+}
+
+@keyframes gallery__picture-floating-up {
+  from {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 /*# sourceMappingURL=gallery.css.map */
