--- a/style/gallery.scss
+++ b/style/gallery.scss
@@ -82,6 +82,7 @@
 #gallery {
   position: relative;
   z-index: -3;
+  user-select: none;
   .container {
     display: flex;
     justify-content: space-between;
@@ -113,5 +114,21 @@
     z-index: 10;
     bottom: 0;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+  }
+}
+.gallery__picture-invisible {
+  opacity: 0;
+}
+.gallery__picture-floating-up {
+  animation: 2s ease gallery__picture-floating-up forwards;
+}
+@keyframes gallery__picture-floating-up {
+  from {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
