--- a/style/video.css
+++ b/style/video.css
@@ -2,47 +2,49 @@
   #video {
     padding: 75px 0;
   }
-  #video div.content {
+  #video .content {
+    position: relative;
     height: 1246px;
   }
-  #video div.content h2 {
+  #video .content h2 {
     width: 610px;
     display: inline-block;
   }
-  #video div.content p {
+  #video .content p {
     display: inline-block;
     width: 720px;
     margin-left: 105px;
   }
-  #video div.content .video-large-container {
+  #video .content .video-large-container {
     position: relative;
     height: 735px;
     width: 100%;
     margin-top: 75px;
   }
-  #video div.content .video-large-container .video-large {
+  #video .content .video-large-container .video-large {
     height: 100%;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
   }
-  #video div.content .video-petite-container {
+  #video .content .video__petite-container {
     display: flex;
     justify-content: space-between;
     margin-top: 42px;
   }
-  #video div.content .video-petite-container .video-petite-holder {
+  #video .content .video__petite-container .video__petite-holder {
+    transform: translateX(40px);
     width: 452px;
     height: 254px;
   }
-  #video div.content .scroller {
+  #video .content .scroller {
     margin-top: 40px;
     margin-left: 640px;
     width: 200px;
     height: 12px;
   }
-  #video div.content .scroller button {
+  #video .content .scroller button {
     width: 12px;
   }
 }
@@ -65,7 +67,7 @@
     height: 504px;
     margin-top: 40px;
   }
-  #video .content .video-petite-container {
+  #video .content .video__petite-container {
     margin-top: 40px;
     height: 170px;
     width: 100%;
@@ -105,21 +107,21 @@
     width: 100%;
     height: 100%;
   }
-  #video .content .video-petite-container {
+  #video .content .video__petite-container {
     justify-content: space-between;
     margin-top: 20px;
     display: flex;
     width: 100%;
     height: 199px;
   }
-  #video .content .video-petite-container iframe {
+  #video .content .video__petite-container iframe {
     width: 354px;
     height: 199px;
   }
-  #video .content .video-petite-container > div:last-child {
+  #video .content .video__petite-container > div:last-child {
     display: none;
   }
-  #video .content .video-petite-container > div:last-child iframe {
+  #video .content .video__petite-container > div:last-child iframe {
     display: none;
   }
   #video .content .scroller {
@@ -149,7 +151,7 @@
     height: 226px;
     top: 100px;
   }
-  #video .content .video-petite-container {
+  #video .content .video__petite-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -158,10 +160,10 @@
     height: 101px;
     top: 366px;
   }
-  #video .content .video-petite-container div:last-child {
+  #video .content .video__petite-container div:last-child {
     display: none;
   }
-  #video .content .video-petite-container .video-petite-holder {
+  #video .content .video__petite-container .video__petite-holder {
     width: 180px;
     height: 101px;
   }
