--- a/style/video.scss
+++ b/style/video.scss
@@ -1,7 +1,8 @@
 @media (min-width: 1920px) {
   #video {
     padding: 75px 0;
-    div.content {
+    .content {
+      position: relative;
       height: 1246px;
       h2 {
         width: 610px;
@@ -25,11 +26,12 @@
           left: 0;
         }
       }
-      .video-petite-container {
+      .video__petite-container {
         display: flex;
         justify-content: space-between;
         margin-top: 42px;
-        .video-petite-holder {
+        .video__petite-holder {
+          transform: translateX(40px);
           width: 452px;
           height: 254px;
         }
@@ -65,7 +67,7 @@
         height: 504px;
         margin-top: 40px;
       }
-      .video-petite-container {
+      .video__petite-container {
         margin-top: 40px;
         height: 170px;
         width: 100%;
@@ -107,7 +109,7 @@
           height: 100%;
         }
       }
-      .video-petite-container {
+      .video__petite-container {
         justify-content: space-between;
         margin-top: 20px;
         display: flex;
@@ -119,7 +121,7 @@
           height: 199px;
         }
       }
-      .video-petite-container > div:last-child {
+      .video__petite-container > div:last-child {
         display: none;
         iframe {
           display: none;
@@ -154,7 +156,7 @@
         height: 226px;
         top: 100px;
       }
-      .video-petite-container {
+      .video__petite-container {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -165,7 +167,7 @@
         div:last-child {
           display: none;
         }
-        .video-petite-holder {
+        .video__petite-holder {
           width: 180px;
           height: 101px;
         }
