--- a/style/video.scss
+++ b/style/video.scss
@@ -190,6 +190,9 @@
     width: 100%;
     height: 100%;
   }
+  .video__petite-holder {
+    transition: all 0.8s ease;
+  }
   .scroller {
     display: flex;
     justify-content: space-between;
@@ -216,8 +219,39 @@
   }
 }
 
-
 .inactive {
   display: none;
+}
+
+.video__appear-left {
+  animation: video__appear-left 1s ease-out forwards;
+}
+.video__shift-left {
+
+}
+.video__disappear-left {
+  animation: video__disappear-left 1s ease-out forwards;;
+}
+
+@keyframes video__appear-left {
+  from {
+    opacity: 0;
+    transform: translateX(70%) scale(0.3);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+}
+
+@keyframes video__disappear-left {
+  from {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(-70%) scale(0.3);
+  }
 }
 
