--- a/style/welcome.css
+++ b/style/welcome.css
@@ -617,17 +617,17 @@
 }
 
 .appear-from-the-right {
-  animation: appear-from-the-right-animation 1s ease-out forwards;
+  animation: appear-from-the-right-animation 1.5s ease forwards;
 }
 
 .disappear-to-the-left {
-  animation: disappear-to-the-left-animation 1s ease-out forwards;
+  animation: disappear-to-the-left-animation 1.5s ease forwards;
 }
 
 @keyframes appear-from-the-right-animation {
   from {
     opacity: 0;
-    transform: translateX(40%) scale(0.7);
+    transform: translateX(120%) scale(1);
   }
   to {
     opacity: 1;
@@ -641,21 +641,21 @@
   }
   to {
     opacity: 0;
-    transform: translateX(-40%) scale(0.7);
+    transform: translateX(-120%) scale(1);
   }
 }
 .appear-from-the-left {
-  animation: appear-from-the-left-animation 1s ease-out forwards;
+  animation: appear-from-the-left-animation 1.8s ease-out forwards;
 }
 
 .disappear-to-the-right {
-  animation: disappear-to-the-right-animation 1s ease-out forwards;
+  animation: disappear-to-the-right-animation 1.8s ease-out forwards;
 }
 
 @keyframes appear-from-the-left-animation {
   from {
     opacity: 0;
-    transform: translateX(-40%) scale(0.7);
+    transform: translateX(-120%) scale(1);
   }
   to {
     opacity: 1;
@@ -669,7 +669,7 @@
   }
   to {
     opacity: 0;
-    transform: translateX(40%) scale(0.7);
+    transform: translateX(120%) scale(1);
   }
 }
 
