--- a/style/welcome.scss
+++ b/style/welcome.scss
@@ -651,16 +651,16 @@
 }
 
 .appear-from-the-right {
-  animation: appear-from-the-right-animation 1s ease-out forwards;
+  animation: appear-from-the-right-animation 1.5s ease forwards;
 }
 .disappear-to-the-left {
-  animation: disappear-to-the-left-animation 1s ease-out forwards;;
+  animation: disappear-to-the-left-animation 1.5s ease forwards;;
 }
 
 @keyframes appear-from-the-right-animation {
   from {
     opacity: 0;
-    transform: translateX(40%) scale(0.7);
+    transform: translateX(120%) scale(1);
   }
   to {
     opacity: 1;
@@ -674,22 +674,22 @@
   }
   to {
     opacity: 0;
-    transform: translateX(-40%) scale(0.7);
+    transform: translateX(-120%) scale(1);
   }
 }
 
 
 .appear-from-the-left {
-  animation: appear-from-the-left-animation 1s ease-out forwards;
+  animation: appear-from-the-left-animation 1.8s ease-out forwards;
 }
 .disappear-to-the-right {
-  animation: disappear-to-the-right-animation 1s ease-out forwards;;
+  animation: disappear-to-the-right-animation 1.8s ease-out forwards;;
 }
 
 @keyframes appear-from-the-left-animation {
   from {
     opacity: 0;
-    transform: translateX(-40%) scale(0.7);
+    transform: translateX(-120%) scale(1);
   }
   to {
     opacity: 1;
@@ -703,6 +703,6 @@
   }
   to {
     opacity: 0;
-    transform: translateX(40%) scale(0.7);
+    transform: translateX(120%) scale(1);
   }
 }
