--- a/style/welcome.scss
+++ b/style/welcome.scss
@@ -39,9 +39,6 @@
             font-size: 22px;
           }
         }
-        .discover-button:hover {
-          background-color: rgba(157, 134, 101, 1);
-        }
       }
       .picture-holder {
         position: absolute;
@@ -51,12 +48,13 @@
         right: 0;
       }
       .picture-shadow {
+        border: 1px solid red;
         position: absolute;
         background: linear-gradient(to right, rgba(0, 0, 0, 1), transparent);
         z-index: 1;
         top: 0;
         left: 0;
-        height: 810px;
+        height: 750px;
         width: 300px;
       }
       .welcome-slider-io {
